--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,7 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             cd /home/${{ secrets.USERNAME }}/app
+            sudo systemctl stop nginx || true
+            sudo systemctl stop apache2 || true
             sudo docker compose down
             sudo docker compose up -d --build
