--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,17 @@
-FROM node:18-alpine
+FROM php:8.2-apache
 
-WORKDIR /app
+# Enable Apache mod_rewrite if needed (optional for basic scripts)
+# RUN a2enmod rewrite
 
-COPY package*.json ./
+# Set the working directory
+WORKDIR /var/www/html
 
-RUN npm install
+# Copy the PHP files to the container
+COPY . /var/www/html/
 
-COPY . .
+# Expose port 80 (Apache default)
+EXPOSE 80
 
-EXPOSE 3000
-
-CMD ["npm", "start"]
+# Clean up default files and set permissions if necessary
+RUN rm -f index.html
+RUN chown -R www-data:www-data /var/www/html
