--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,31 @@
-services:
-  backend:
-    build: ./backend
-    ports:
-      - "3000:80"
-    restart: always
+version: "3.9"
 
+services:
+  # Frontend con Nginx
   frontend:
-    build: ./frontend
+    image: nginx:latest
+    container_name: app-frontend
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./frontend:/usr/share/nginx/html:ro      # tu código frontend
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro   # certificados en la EC2
     depends_on:
       - backend
-    restart: always
+    networks:
+      - app-network
+
+  # Backend con PHP-FPM
+  backend:
+    image: php:8.1-fpm
+    container_name: app-backend
+    volumes:
+      - ./backend:/var/www/html
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
